fix de overflow, hrefs en botones/header

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -116,6 +116,8 @@
 .index-wrapper {
   min-height: 100vh;
   padding: 0 1%;
+  max-width: 100vw;
+  width: 100vw;
 }
 
 h2 {
